Overlap figure between QTLs

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_knit$set(root.dir = "D:/001_Projects/010_CONQUER_TEST/Test/")
 depp <- c("BioCircos","cluster","ggplot2","enrichR","htmlwidgets",
           "rio","shiny","shinycssloaders","stringr","viridis",
           "DT","coloc","curl","dplyr","grDevices","jsonlite","plotly",
-          "shinyjs","reshape2","shinythemes","stats","purrr","readr")
+          "shinyjs","reshape2","shinythemes","stats","purrr","readr","UpSetR")
 
 BioDepp <- c("IRanges","BiocGenerics","clusterProfiler")
 
