--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "CONQUER"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
+author: Gerard Bouland, Joline Beulens, Joey Nap, Arno van der Slik, Arnaud Zaldumbide, Leen ’t Hart and Roderick Slieker
 output: 
   github_document:
     toc: true 
@@ -11,6 +12,7 @@ editor_options:
   chunk_output_type: console
 ---
 
+# COmprehend fuNctional conseQUencEs R <img src="https://github.com/roderickslieker/CONQUER.test/blob/master/CONQUER.png" align="right" width="120" />
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -18,9 +20,8 @@ editor_options:
 knitr::opts_knit$set(root.dir = "D:/001_Projects/010_CONQUER_TEST/Test/")
 ```
 
-# COmprehend fuNctional conseQUencEs R <img src="https://github.com/roderickslieker/CONQUER.test/blob/master/CONQUER.png" align="right" width="120" />
 
-*Gerard Bouland, Joline Beulens, Joey Nap, Arno van der Slik, Arnaud Zaldumbide, Leen ’t Hart and Roderick Slieker*
+**
 
 ## Change log
 
