--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,10 @@ knitr::opts_knit$set(root.dir = "D:/001_Projects/010_CONQUER_TEST/Test/")
 
 ## Change log
 
+*v.1.1.3*
+
+- Added support for different P-value cut-offs in multi-analyze (see below)
+
 *v.1.1.2*
 
 - Allow users to use precalculated SNPs in GTEx instead of calculating them all. 
